# bloom

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.release  Dockerfile.scheduler  Dockerfile.web  Dockerfile.worker  LICENSE.txt  Makefile  README.md  SECURITY.md
bloom/: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  countries.json  email_domains_blocklist.txt  env.example  stripe.example.json
bloom/.cargo/: config.toml
bloom/analytics/: Cargo.toml
bloom/analytics/src/: consts.rs  entities.rs  error.rs
bloom/analytics/src/repository/: create_page_event.rs  create_track_event.rs  create_visitor.rs  find_devices.rs  find_events.rs  find_pages.rs  find_referrers.rs  find_visitor_by_anonymous_id.rs  find_visits.rs  mod.rs
bloom/analytics/src/service/: find_analytics.rs  find_or_create_visitor.rs  handle_page_event.rs  handle_track_event.rs  mod.rs  process_page_event.rs  process_track_event.rs  utils.rs  validators.rs
bloom/bloom/: Cargo.toml  build.rs
bloom/bloom/src/: main.rs
bloom/bloom/src/cli/: masterkey.rs  mod.rs  release.rs  scheduler.rs  server.rs  version.rs  worker.rs
bloom/calendar/: Cargo.toml
bloom/calendar/src/: consts.rs  entities.rs  error.rs  lib.rs
bloom/calendar/src/repository/: create_event.rs  delete_event.rs  find_event_by_id.rs  find_events.rs  mod.rs  update_event.rs
bloom/calendar/src/service/: create_event.rs  delete_event.rs  find_events.rs  mod.rs  update_event.rs  validators.rs
bloom/contacts/: Cargo.toml
bloom/db/migrations/: 000001_init.sql  000002_calendar.sql  000003_chatbox-preferences.sql  000004_avatars.sql
bloom/files/: Cargo.toml
bloom/files/src/: consts.rs  entities.rs  error.rs  lib.rs
bloom/files/src/repository/: create_file.rs  detach_all_files_from_namespace.rs  detach_all_trashed_files_from_namespace.rs  find_all_trashed_files.rs  find_children.rs  find_children_recursively.rs  find_explicitly_trashed_files.rs  find_file_by_id.rs  find_file_by_parent_and_name.rs  find_files_by_ids.rs  find_root_file_for_namespace.rs  get_file_path.rs  mod.rs  update_file.rs
bloom/files/src/service/: clean_namespace.rs  complete_file_upload.rs  create_folder.rs  empty_trash.rs  find_file.rs  find_trash.rs  get_file_download_url.rs  init_namespace.rs  mod.rs  move_files.rs  move_files_to_trash.rs  rename_file.rs  restore_files_from_trash.rs  validators.rs
bloom/http_server/: Cargo.toml
bloom/http_server/src/: context.rs  lib.rs
bloom/http_server/src/api/: mod.rs  scalars.rs
bloom/http_server/src/middlewares/: auth.rs  cache_headers.rs  mod.rs  no_cache_headers.rs  request_id.rs  security_headers.rs
bloom/inbox/: Cargo.toml
bloom/inbox/src/: consts.rs  entities.rs  error.rs  lib.rs  notifications.rs
bloom/inbox/src/repository/: create_chatbox_preferences.rs  create_contact.rs  create_contact_anonymous_id_relation.rs  create_conversation.rs  create_conversation_contact_relation.rs  create_inbox_message.rs  create_newsletter_list.rs  create_newsletter_list_contact_relation.rs  create_newsletter_list_subscription.rs  create_newsletter_message.rs  delete_contact.rs  delete_newsletter_list.rs  delete_newsletter_list_subscription.rs  delete_newsletter_message.rs  detach_messages_from_user.rs  find_archived_conversations.rs  find_chatbox_preferences_for_namespace.rs  find_contact_by_anonymous_id.rs  find_contact_by_email.rs  find_contact_by_id.rs  find_contacts_for_list.rs  find_contacts_for_namespace.rs  find_conversation_by_id.rs  find_inbox_conversation_for_anonymous_id.rs  find_inbox_conversations.rs  find_inbox_conversations_by_namespace_id.rs  find_inbox_messages_for_conversation.rs  find_newsletter_list_acquisition.rs  find_newsletter_list_by_id.rs  find_newsletter_lists_for_namespace.rs  find_newsletter_message_by_id.rs  find_newsletter_messages_by_list_id.rs  find_newsletter_messages_for_namespace.rs  find_newsletter_subscription_by_contact_id_and_list_id.rs  find_spam_conversations.rs  find_subscriptions_for_list.rs  find_trashed_conversations.rs  mod.rs  update_chatbox_preferences.rs  update_contact.rs  (+3 more)
bloom/inbox/src/service/: clean_user.rs  create_contact.rs  create_newsletter_list.rs  create_newsletter_message.rs  delete_contact.rs  delete_newsletter_list.rs  delete_newsletter_message.rs  find_archive.rs  find_chatbox_messages.rs  find_chatbox_preferences.rs  find_contact.rs  find_contacts.rs  find_inbox.rs  find_newsletter_list.rs  find_newsletter_lists.rs  find_newsletter_message.rs  find_newsletter_messages.rs  find_spam.rs  find_trash.rs  import_contacts.rs  init_namespace.rs  job_dispatch_send_newsletter_message.rs  job_send_newsletter_message.rs  link_chatbox_contact.rs  mod.rs  move_conversation_to_archive.rs  move_conversation_to_inbox.rs  move_conversation_to_spam.rs  move_conversation_to_trash.rs  remove_contact_from_list.rs  send_chatbox_message.rs  send_message.rs  send_newsletter_message.rs  send_test_newsletter_message.rs  subscribe_to_list.rs  unsubscribe_from_list.rs  update_chatbox_avatar_unauthenticated.rs  update_chatbox_preferences.rs  update_contact.rs  update_newsletter_list.rs  (+3 more)
bloom/kernel/: Cargo.toml
bloom/kernel/src/: actor.rs  config.rs  consts.rs  db.rs  entities.rs  lib.rs  notifications.rs
bloom/kernel/src/domain/: mod.rs
bloom/kernel/src/drivers/: mod.rs
bloom/kernel/src/errors/: kernel.rs  mod.rs
bloom/kernel/src/http/: api.rs  error.rs  mod.rs
bloom/kernel/src/repository/: create_customer.rs  create_group.rs  create_group_invitation.rs  create_group_membership.rs  create_namespace.rs  create_pending_email.rs  create_pending_session.rs  create_pending_user.rs  create_session.rs  create_upload.rs  create_user.rs  delete_group_invitation.rs  delete_namespace.rs  (+51 more)
bloom/libs/crypto42/: Cargo.toml  LICENSE.txt  Makefile
bloom/libs/crypto42_libsodium_sys/: Cargo.toml
bloom/libs/stdx/: .gitignore  Cargo.toml
bloom/scheduler/: Cargo.toml
bloom/scheduler/src/: lib.rs  scheduler.rs
bloom/stdx/: Cargo.toml  README.md
bloom/stdx/src/: base32.rs  lib.rs  rand.rs
bloom/worker/: Cargo.toml
bloom/worker/src/: _old.rs  lib.rs  worker.rs
(+650 files in other folders)
