[package]
name = "calendar"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
stdx = { git = "https://github.com/skerkour/stdx", rev = "b5adb65059491d3f4bfdc8c485688ee9df6754a2" }

