[package]
name = "http_server"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
stdx = { path = "../libs/stdx" }

files = { path = "../files" }
analytics = { path = "../analytics" }
inbox = { path = "../inbox" }
calendar = { path = "../calendar" }


actix-web = "3"
actix-cors = "0.5"
actix-files = "0.5"
actix-multipart = "0.3"
serde = { version = "1", features = ["derive"] }
