[package]
name = "inbox"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
stdx = { git = "https://github.com/skerkour/stdx", branch = "tokio02" }


async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tera = { version = "1", default-features = false }
