[package]
name = "worker"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
stdx = { path = "../stdx" }

tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "rustls-tls"] }
