[package]
name = "worker"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
stdx = { path = "../libs/stdx" }

analytics = { path = "../analytics" }
inbox = { path = "../inbox" }

tokio = { version = "0.2", features = ["full"] }
sentry = { version = "0.21", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
